--- a/RISCV.vcxproj.filters
+++ b/RISCV.vcxproj.filters
@@ -15,13 +15,25 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="operator.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="register.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="translate.hpp">
+    <ClInclude Include="instruction_fetch.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="execute.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="instruction_decode.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="memory_access.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="write_back.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="tools.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
